examples/good/06-02-main-with-arguments.lagger
string main(int n){
    return "Hello World";
}