examples/bad/06-06-no-main.lagger
int Main(){
    println("Hello World");
    return 0;
}